fixed cropped pfp on mobile

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -91,7 +91,7 @@
 
         .section__pic-container{
             width: auto;
-            height: 46vw;
+            height: auto;
             justify-content: center;
         }
 
